--- a/MVCTravelBookingISE/Views/BookingModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Delete.cshtml
@@ -12,35 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking_Name)
+            @Html.DisplayNameFor(model => model.Booking_Approved)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Booking_Name)
+            @Html.DisplayFor(model => model.Booking_Approved)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Booking_date)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Booking_date)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Flight_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Flight_Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Acco_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Acco_Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Transport_Id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Transport_Id)
-        </dd>
+       
     </dl>
     
     <form asp-action="Delete">
