--- a/MVCTravelBookingISE/Views/BookingModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Edit.cshtml
@@ -14,30 +14,16 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Booking_Id" />
             <div class="form-group">
-                <label asp-for="Booking_Name" class="control-label"></label>
-                <input asp-for="Booking_Name" class="form-control" />
-                <span asp-validation-for="Booking_Name" class="text-danger"></span>
+                <label asp-for="Booking_Approved" class="control-label"></label>
+                <input asp-for="Booking_Approved" class="form-control" />
+                <span asp-validation-for="Booking_Approved" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Booking_date" class="control-label"></label>
-                <input asp-for="Booking_date" class="form-control" />
-                <span asp-validation-for="Booking_date" class="text-danger"></span>
+                <label asp-for="Booking_Startdate" class="control-label"></label>
+                <input asp-for="Booking_Startdate" class="form-control" />
+                <span asp-validation-for="Booking_Startdate" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Flight_Id" class="control-label"></label>
-                <input asp-for="Flight_Id" class="form-control" />
-                <span asp-validation-for="Flight_Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Acco_Id" class="control-label"></label>
-                <input asp-for="Acco_Id" class="form-control" />
-                <span asp-validation-for="Acco_Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Transport_Id" class="control-label"></label>
-                <input asp-for="Transport_Id" class="form-control" />
-                <span asp-validation-for="Transport_Id" class="text-danger"></span>
-            </div>
+           
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
