--- a/MVCTravelBookingISE/Views/BookingModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Index.cshtml
@@ -1,59 +1,43 @@
-﻿@model IEnumerable<MVCTravelBookingISE.Models.BookingModel>
+﻿@using MVCTravelBookingISE.Data.VM
+
+@model IEnumerable<MVCTravelBookingISE.Models.BookingModel>;
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Booking Summary";
 }
 
-<h1>Index</h1>
+<div  class="row">
+ <div class="col-md-8 offset-2">
+     <div class="text-center">
+         <h2>Your Booking summary</h2>
+     </div>
+     <table>
+         <thead>
+             <tr>
+                 <th>Selected Amount</th>
+                 <th>Accomodation</th>
+                 <th>Price</th>
+                 <th>SubTotal</th>
+                </tr>
+            </thead>
+             <tbody>
+               @foreach(var item in Model){
+                   <tr>
+                       <td class="align-middle">@item.Booking_Approved</td>
+                   </tr>
+               }
+             </tbody>
+            <tfoot>
+            </tfoot>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Booking_Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Booking_date)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Flight_Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Acco_Id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Transport_Id)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Booking_Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Booking_date)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Flight_Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Acco_Id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Transport_Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Booking_Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Booking_Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Booking_Id">Delete</a>
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+     </table>
+
+
+ </div>
+
+
+
+
+
+
+</div>
