--- a/MVCTravelBookingISE/Views/AccomodationModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Details.cshtml
@@ -86,4 +86,12 @@
 <div>
     <a class="btn btn-danger" asp-action="Edit" asp-route-id="@Model?.Acco_Id">Edit</a> |
     <a class="btn btn-info"asp-action="Index">Back to List</a>
+    <a class="btn btn-success text-white" data-toggle="popover"
+       asp-controller="BookingReserved"
+       asp-action="AddItemToBooking"
+       asp-route-id="@Model?.Acco_Id">
+        <!-- Full screen modal -->
+         Add to booking
+        
+    </a>
 </div>
