--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@model IEnumerable<MVCTravelBookingISE.Models.AccomodationModel>
-@*<link rel="stylesheet" href="~/css/FlightHome.css" />*@
+
 
 @{
     ViewData["Title"] = "Index";
@@ -15,9 +15,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
-    @*<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>*@
+   
 </head>
 
 <body>
@@ -285,8 +283,8 @@
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
                                 <a class="btn btn-success text-white" data-toggle="popover"
-                               asp-controller="Booking"
-                               asp-action="AddItemToBooking"
+                               asp-controller="BookingModels"
+                                   asp-action="AddItemToBooking"
                                asp-route-id="@item.Acco_Id">
                                         <!-- Full screen modal -->
                                     
