--- a/MVCTravelBookingISE/Views/BookingModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Index.cshtml
@@ -1,43 +1,71 @@
-﻿@using MVCTravelBookingISE.Data.VM
-
-@model IEnumerable<MVCTravelBookingISE.Models.BookingModel>;
+﻿
+@using MVCTravelBookingISE.Data.ViewModels;
+@model BookingVModel
 
 @{
     ViewData["Title"] = "Booking Summary";
 }
 
-<div  class="row">
- <div class="col-md-8 offset-2">
-     <div class="text-center">
-         <h2>Your Booking summary</h2>
-     </div>
-     <table>
-         <thead>
-             <tr>
-                 <th>Selected Amount</th>
-                 <th>Accomodation</th>
-                 <th>Price</th>
-                 <th>SubTotal</th>
+<div class="row">
+    <div class="col-md-8 offset-2">
+        <div class="text-center">
+            <h2>Your Booking summary</h2>
+        </div>
+        <table>
+            <thead>
+                <tr>
+                    <th>Selected Amount</th>
+                    <th>Item</th>
+                    <th>Price</th>
+                    <th>SubTotal</th>
+                    <th></th>
                 </tr>
             </thead>
-             <tbody>
-               @foreach(var item in Model){
-                   <tr>
-                       <td class="align-middle">@item.Booking_Approved</td>
-                   </tr>
-               }
-             </tbody>
+            <tbody>
+                @foreach (var item in Model.BookingReserved.bookingitems)
+                {
+                    <tr>
+                        <td class="align-middle">@item.Amount</td>
+                        <td class="align-middle">@item.Accomodation.Acco_Name</td>
+                        <td class="align-middle">@((item.Amount * item.Accomodation.Acco_Price).ToString("c"))</td>
+                        <td class="align-middle">
+                            <a class="text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBooking" asp-route-id="@item.Accomodation.Acco_Id">
+                                <i class="bi bi-cart-dash">
+
+                                </i>
+                            </a>
+                            <a class="text-success" asp-controller="BookingReserved" asp-action="AddItemToBooking" asp-route-id="@item.Accomodation.Acco_Id">
+                                <i class="bi bi-cart-plus">
+
+                                </i>
+                            </a>
+                        </td>
+                    </tr>
+                }
+            </tbody>
+
+
             <tfoot>
+                <tr>
+                    <td colspan="2">  </td>
+                    <td><b>Total</b></td>
+                    <td>
+                        @Model.BookingTotalPrice.ToString("c")
+                    </td>
+                    <td></td>
+                </tr>
+
+
+
             </tfoot>
 
-     </table>
 
+        </table>
+        <div class="text-center">
+            <div class="btn-group">
+                <a class="btn btn-outline-success" asp-controller="Accomodation" asp-action="Index"> Add more items</a>
+            </div>
+        </div>
 
- </div>
-
-
-
-
-
-
+    </div>
 </div>
