--- a/MVCTravelBookingISE/Views/AccomodationModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Details.cshtml
@@ -87,8 +87,8 @@
     <a class="btn btn-danger" asp-action="Edit" asp-route-id="@Model?.Acco_Id">Edit</a> |
     <a class="btn btn-info"asp-action="Index">Back to List</a>
     <a class="btn btn-success text-white" data-toggle="popover"
-       asp-controller="BookingReserved"
-       asp-action="AddItemToBooking"
+       asp-controller="BookingModels"
+       asp-action="AddItemToBookingCart"
        asp-route-id="@Model?.Acco_Id">
         <!-- Full screen modal -->
          Add to booking
