--- a/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Index.cshtml
@@ -38,39 +38,53 @@
     </section>
   *@
 
-  <h1>Search for Accomodation that suits you! </h1>
  
-    <div class="card">
+    <div class="card border-5" style="margin-top:50px;">
     <div class="card-body ">
-          
+            <select class="form-control" id="Role" name="Role">
+                <option value="">- Please select a role-</option>
+                <option value="Project Manager">Project Manager</option>
+                <option value="Team Leader">Team Leader</option>
+                <option value="Senior Developer">Senior Developer</option>
+                <option value="Junior Developer">Junior Developer</option>
+                <option value="Tester">Tester</option>
+                <option value="Network Manager">Network Manager</option>
+                <option value="Support Person">Support Person</option>
+            </select>
             <div class="row">
                 <div class="col">
                     <div class="mb-2">
                         <label id="origin-label" for="origin-input" class="form-label text-black">
                           
                         </label>
-                        <div class="input-group">
-                            <span class="input-group-text">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search-heart-fill" viewBox="0 0 16 16">
-                                    <path d="M6.5 13a6.474 6.474 0 0 0 3.845-1.258h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.008 1.008 0 0 0-.115-.1A6.471 6.471 0 0 0 13 6.5 6.502 6.502 0 0 0 6.5 0a6.5 6.5 0 1 0 0 13Zm0-8.518c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z" />
-                                </svg>
-                            </span>
-                            <input type="text" class="form-control" list="origin-options" id="origin-input" placeholder="Where are you going?" aria-describedby="origin-label" />
-                            <datalist id="origin-options"></datalist>
-                        </div>
+                      
                     </div>
-                   
+                    
                 </div>
-              
                 <div class="col">
                     <div class="mb-2">
-                        <a class="btn btn-primary text-white" asp-action="Create">Search Accomodation!</a>
-                        
+                        <form class="d-flex" asp-controller="AccomodationModels" asp-action="Filter">
+                            <div class="input-group">
+                                <span class="input-group-text">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search-heart-fill" viewBox="0 0 16 16">
+                                        <path d="M6.5 13a6.474 6.474 0 0 0 3.845-1.258h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.008 1.008 0 0 0-.115-.1A6.471 6.471 0 0 0 13 6.5 6.502 6.502 0 0 0 6.5 0a6.5 6.5 0 1 0 0 13Zm0-8.518c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z" />
+                                    </svg>
+                                </span>
+                                <input type="text" class="form-control" list="origin-options" id="origin-input" placeholder="Where are you going?" aria-describedby="origin-label" />
+                                <datalist id="origin-options"></datalist>
+                            </div>
+                            <button class="btn btn-secondary my-2 my-sm-0 g" type="submit">Search</button>
+                        </form>
                     </div>
-
                 </div>
-                
-               @* <div id="departure-date" class="mb-1">
+
+
+
+              
+
+
+
+                @* <div id="departure-date" class="mb-1">
                     <label id="departure-date-label" for="departure-date-input" class="form-label">Check-in date</label>
                     <div class="input-group">
                         <span class="input-group-text"><i class="bi-calendar"></i></span>
@@ -118,8 +132,11 @@
                     <div class="card-body">
                         <h5 class="card-title"><strong>Hotels</strong></h5>
                         <p class="card-text">How much hotels are there</p>
-                        <button class="btn btn-sm btn-success">Explore!</button>
-
+                       
+                         <form class="d-flex" asp-controller="AccomodationModels" asp-action="FilterHotel">
+                            <button class="btn btn-sm btn-success">Explore!</button>
+                       
+                    </form>
                     </div>
                 </div>
             </div>
@@ -129,7 +146,10 @@
                     <div class="card-body">
                         <h5 class="card-title"><strong>Resorts</strong></h5>
                         <p class="card-text">How much hotels are there</p>
-                        <button class="btn btn-sm btn-success">Explore!</button>
+                          <form class="d-flex" asp-controller="AccomodationModels" asp-action="FilterResort">
+                            <button class="btn btn-sm btn-success">Explore!</button>
+                       
+                    </form>
                     </div>
                 </div>
             </div>
@@ -141,7 +161,10 @@
                     <div class="card-body">
                             <h5 class="card-title"><strong>Villas</strong></h5>
                         <p class="card-text">How much hotels are there</p>
-                        <button class="btn btn-sm btn-success">Explore!</button>
+                          <form class="d-flex" asp-controller="AccomodationModels" asp-action="FilterVilla">
+                            <button class="btn btn-sm btn-success">Explore!</button>
+                       
+                    </form>
                     </div>
                 </div>
             </div>
@@ -151,7 +174,10 @@
                     <div class="card-body">
                              <h5 class="card-title"><strong>Apartments</strong></h5>
                         <p class="card-text">How much hotels are there</p>
-                        <button class="btn btn-sm btn-success">Explore!</button>
+                        <form class="d-flex" asp-controller="AccomodationModels" asp-action="FilterApartment">
+                            <button class="btn btn-sm btn-success">Explore!</button>
+
+                        </form>
                     </div>
                 </div>
             </div>
@@ -284,10 +310,10 @@
                                 </a>
                                 <a class="btn btn-success text-white" data-toggle="popover"
                                asp-controller="BookingModels"
-                                   asp-action="AddItemToBooking"
+                               asp-action="AddItemToBookingCart"
                                asp-route-id="@item.Acco_Id">
                                         <!-- Full screen modal -->
-                                    
+                                    Add to Booking
                                    (Price @item.Acco_Price.ToString("c") /Per Night)
                                 </a>
                                 
