--- a/MVCTravelBookingISE/Views/Main/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Main/Index.cshtml
@@ -16,20 +16,66 @@
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
 <body>
-    <div id="about" class="container-fluid">
+    <div id="about" class="container-fluid" style="margin-top:50px;">
         <div class="row">
             <div class="col-sm-8">
                 <h2>About Company Page</h2><br>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <br><button class="btn btn-default btn-lg">Get in Touch</button>
+                <br><button class="btn btn-primary  btn-lg">Get in Touch</button>
             </div>
             <div class="col-sm-4">
                 <span class="glyphicon glyphicon-signal logo"></span>
             </div>
         </div>
     </div>
-
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+            <div class="card">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top" alt="Hollywood Sign on The Hill" />
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                        This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                        This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/044.webp" class="card-img-top" alt="Skyscrapers" />
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">
+                        This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
     <main class="">
         <div class="container">
             <!--Section: Content-->
@@ -40,7 +86,7 @@
 
             <!--Section: Content-->
             <section class="text-center">
-                <h1 class=""><strong>Unlimited Travels</strong></h1>
+             
 
                 <div class="row">
                     <div class="col-lg-4 col-md-12 mb-4">
@@ -52,12 +98,12 @@
                                 </a>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Airlines</h5>
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the bulk of the
                                     card's content.
                                 </p>
-                                <a href="#!" class="btn btn-primary">Button</a>
+                                <a href="#!" class="btn btn-primary">Explore airlines</a>
                             </div>
                         </div>
                     </div>
@@ -71,12 +117,12 @@
                                 </a>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Transport</h5>
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the bulk of the
                                     card's content.
                                 </p>
-                                <a href="#!" class="btn btn-primary">Button</a>
+                                <a href="#!" class="btn btn-primary">Explore transport</a>
                             </div>
                         </div>
                     </div>
@@ -84,18 +130,18 @@
                     <div class="col-lg-4 col-md-6 mb-4">
                         <div class="card">
                             <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                                <img src="https://mdbootstrap.com/img/new/standard/nature/111.jpg" class="img-fluid" />
+                                <img src="https://images.unsplash.com/photo-1600671012016-e5890d87f804?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1254&q=80" class="img-fluid" />
                                 <a href="#!">
                                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);"></div>
                                 </a>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
+                                <h5 class="card-title">Accomodation</h5>
                                 <p class="card-text">
                                     Some quick example text to build on the card title and make up the bulk of the
                                     card's content.
                                 </p>
-                                <a href="#!" class="btn btn-primary">Button</a>
+                                <a href="#!" class="btn btn-primary">Explore Accomodation</a>
                             </div>
                         </div>
                     </div>
