--- a/MVCTravelBookingISE/Views/AccomodationModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Details.cshtml
@@ -4,94 +4,42 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>More information about the Accomodation</h1>
+<h1 class="text-xxl-center">More information about the Accomodation</h1>
 
       
     <hr />
-    <div class="card">
-       <div class="card-body">
-
-
-        <dl class="row gx-5">
+    <div class="card text-center">
+    <div class="card-header"> @Html.DisplayFor(model => model.Acco_Destination)</div>
+    <img class="card-img-top align-content-md-center" style="height:300px; width:350px; " src=" @Html.DisplayFor(model => model.Acco_picture)" />
+    <div class="card-body">
+        <h3 class="card-title"> @Html.DisplayFor(model => model.Acco_Name)</h3>
         
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Name)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Name)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Destination)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Destination)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Rooms)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Rooms)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Bathrooms)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Bathrooms)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Distance)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Distance)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Rate)
-            </dt>
-            <dd class = "col-sm-10">
-                @*@{ 
-                    if(Model.Ratings.Count > 0){
-
-                        <p>The overall rating for @Model.Acco_Name is @Model.Acco_Rate </p>
-                    }
-                    else{
-                        <p>Be the first one to rate @Model.Acco_Name</p>
-                    }
-                   
-                }*@
-               @{using (Html.BeginForm()){
-                   for(int i=0; i< 6;i++){
-                       <input type="radio" id="rating" name="rating" value="@i"/>@i
-                   }
-                     <input type="submit" value="Add your rating"/>
-               }
-               }
-            </dd>
-          
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Price)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Price)
-            </dd>
-            <dt class = "col-sm-2">
-                @Html.DisplayNameFor(model => model.Acco_Rules)
-            </dt>
-            <dd class = "col-sm-10">
-                @Html.DisplayFor(model => model.Acco_Rules)
-            </dd>
-        </dl>
-     </div>
-
-  </div>
-<div>
-    <a class="btn btn-danger" asp-action="Edit" asp-route-id="@Model?.Acco_Id">Edit</a> |
-    <a class="btn btn-info"asp-action="Index">Back to List</a>
-    <a class="btn btn-success text-white" data-toggle="popover"
+        <p class="card-text"> @Html.DisplayFor(model => model.Acco_Rules)</p>
+     
+      
+         <a class="btn btn-success text-white" data-toggle="popover"
        asp-controller="BookingModels"
        asp-action="AddItemToBookingCart"
        asp-route-id="@Model?.Acco_Id">
         <!-- Full screen modal -->
          Add to booking
+        
+    </a>
+    </div>
+    <div class="card-footer text-muted">@Html.DisplayFor(model => model.Acco_Rate)</div>
+</div>
+      
+<div>
+     
+    <a class="btn btn-danger" asp-action="Edit" asp-route-id="@Model?.Acco_Id">Edit</a> 
+    <a class="btn btn-outline-dark"asp-action="Index">Back to List</a>
+    <a class="btn btn-success text-white " data-toggle="popover"
+
+       asp-controller="BookingModels"
+       asp-action="AddItemToBookingCart"
+       asp-route-id="@Model?.Acco_Id">
+        <!-- Full screen modal -->
+         Add to booking(Price @Model?.Acco_Price.ToString("c"))
         
     </a>
 </div>
