--- a/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/BookingCart.cshtml
@@ -10,12 +10,11 @@
         <div class="text-center">
             <h2>Your Booking summary</h2>
         </div>
-        <table>
+        <table class="table">
             <thead>
                 <tr>
-                    <th>Selected Amount</th>
+                    <th>Qauntity</th>
                     <th>Item</th>
-
                     <th>Price</th>
                     <th>SubTotal</th>
                     <th></th>
@@ -30,15 +29,17 @@
                         <td class="align-middle">@item.Accomodation.Acco_Price</td>
                         <td class="align-middle">@((item.Qauntity * item.Accomodation.Acco_Price).ToString("c"))</td>
                         <td class="align-middle">
-                            <a class="text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBooking" asp-route-id="@item.Accomodation.Acco_Id">
-                                <i class="bi bi-cart-dash">
-
-                                </i>
+                            <a class=" text-danger" asp-controller="BookingReserved" asp-action="RemoveItemFromBookingCart" asp-route-id="@item.Accomodation.Acco_Id">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                    <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z" />
+                                </svg>
                             </a>
-                            <a class="text-success" asp-controller="BookingModels" asp-action="AddItemToBookingCart" asp-route-id="@item.Accomodation.Acco_Id">
-                                <i class="bi bi-cart-plus">
-
-                                </i>
+                            <a class="text-success" asp-controller="BookingReserved" asp-action="AddItemToBookingCart" asp-route-id="@item.Accomodation.Acco_Id">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+                                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+                                    <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+                                </svg>
                             </a>
                         </td>
                     </tr>
