--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
@@ -14,7 +14,7 @@
              <div class="container">
                 <div class="row gx-lg-5 align-items-center">
                     <div class="col-lg-6 mb-5 mb-lg-0">
-                        <img  class="align-items-center"src="~/img/A letter Logo design(2).png" style="width:150px" />
+                        <img  class="align-items-center"src="~/img/A letter Logo design(5).png" style="width:150px" />
                         <h1 class="my-5 display-3 fw-bold ls-tight">
                             Unlimited Travels <br />
                         
@@ -32,7 +32,7 @@
                                      <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
                                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                           <div class="row">
-                                                <div class="col-md-6 mb-4">
+                                            @*    <div class="col-md-6 mb-4">
                                                     <div class="form-outline">
                                                         <input asp-for="Input.FirstName" class="form-control" autocomplete="username" aria-required="true" />
                                                         <label asp-for="Input.FirstName"></label>
@@ -48,7 +48,7 @@
                                                             <label asp-for="Input.LastName"></label>
                                                             <span asp-validation-for="Input.LastName" class="text-danger"></span>
                                                         </div>
-                                                    </div>
+                                                    </div>*@
 
                                            </div>
 
