--- a/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Create.cshtml
@@ -4,15 +4,13 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
 
-<h4>AccomodationModel</h4>
+
+<h4>List your property Below</h4>
 <hr />
 <div class="row">
     <div class="col-md-8 off-set-2">
-        <p>
-            <h4>New Accomodation</h4>
-        </p>
+       
         <div class="row">
             <div class="col-md-8 offset-2">
                 <form asp-action="Create" class="">
@@ -123,4 +121,4 @@
             output.src $(this).val();
         }
     </script>*@
-}
+
