--- a/MVCTravelBookingISE/Views/AccomodationModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Delete.cshtml
@@ -63,9 +63,10 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Acco_Id" />
-        <input type="submit" value="Confirm" class="btn btn-danger float-right" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Confirm" class="btn btn-danger float-right" /> 
+        <a class="btn btn-outline-success"  asp-action="Index">Back to List</a>
+
+        <a class="btn btn-outline-secondary" asp-action="btn btn-outline-secondary" asp-action="Index">Show all</a>
     </form>
   
-    <a class="btn btn-outline-secondary" asp-action="btn btn-outline-secondary" asp-action="Index">Show all</a>
 </div>
