--- a/MVCTravelBookingISE/Views/Main/Index.cshtml
+++ b/MVCTravelBookingISE/Views/Main/Index.cshtml
@@ -8,7 +8,7 @@
 }
 <head>
 
-    <title>Bootstrap Theme Company</title>
+    <title>Home Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -19,22 +19,22 @@
     <div id="about" class="container-fluid" style="margin-top:50px;">
         <div class="row">
             <div class="col-sm-8">
-                <h2>About Company Page</h2><br>
+                <h2>About Unlimited Travels</h2><br>
                 <h4>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <br><button class="btn btn-primary  btn-lg">Get in Touch</button>
+             
             </div>
             <div class="col-sm-4">
                 <span class="glyphicon glyphicon-signal logo"></span>
             </div>
         </div>
     </div>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="row row-cols-1 row-cols-md-2 g-4" style="margin-top:50px;">
         <div class="col">
             <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top" alt="Hollywood Sign on The Hill" />
+                <img src="https://images.unsplash.com/photo-1483653364400-eedcfb9f1f88?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" class="card-img-top" alt="Hollywood Sign on The Hill" />
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">International Flights</h5>
                     <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.
@@ -44,9 +44,9 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road" />
+                <img src="https://images.unsplash.com/photo-1636706519609-988babca3dd5?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1258&q=80" class="card-img-top" alt="Palm Springs Road" />
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">National Flights</h5>
                     <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.
@@ -56,9 +56,9 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers" />
+                <img src="https://images.unsplash.com/photo-1522083165195-3424ed129620?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1297&q=80" class="card-img-top" alt="Los Angeles Skyscrapers" />
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
+                    <h5 class="card-title">The world' top 10 places to celebrate the Holidays</h5>
                     <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                 </div>
             </div>
@@ -103,7 +103,7 @@
                                     Some quick example text to build on the card title and make up the bulk of the
                                     card's content.
                                 </p>
-                                <a href="#!" class="btn btn-primary">Explore airlines</a>
+                                <a href="FlightModels/Index" class="btn btn-primary">Explore airlines</a>
                             </div>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
                                     Some quick example text to build on the card title and make up the bulk of the
                                     card's content.
                                 </p>
-                                <a href="#!" class="btn btn-primary">Explore transport</a>
+                                <a href="TransportModels/Index" class="btn btn-primary">Explore transport</a>
                             </div>
                         </div>
                     </div>
@@ -141,7 +141,7 @@
                                     Some quick example text to build on the card title and make up the bulk of the
                                     card's content.
                                 </p>
-                                <a href="#!" class="btn btn-primary">Explore Accomodation</a>
+                                <a href="AccomodationModels/Index" class="btn btn-primary">Explore Accomodation</a>
                             </div>
                         </div>
                     </div>
@@ -151,82 +151,81 @@
 
             <hr class="my-5" />
 
-            <!--Section: Content-->
-            <section class="mb-5">
-                <h4 class="mb-5 text-center"><strong>Facilis consequatur eligendi</strong></h4>
-
-                <div class="row d-flex justify-content-center">
-                    <div class="col-md-6">
-                        <form>
-                            <!-- 2 column grid layout with text inputs for the first and last names -->
-                            <div class="row mb-4">
-                                <div class="col">
-                                    <div class="form-outline">
-                                        <input type="text" id="form3Example1" class="form-control" />
-                                        <label class="form-label" for="form3Example1">First name</label>
-                                    </div>
-                                </div>
-                                <div class="col">
-                                    <div class="form-outline">
-                                        <input type="text" id="form3Example2" class="form-control" />
-                                        <label class="form-label" for="form3Example2">Last name</label>
-                                    </div>
-                                </div>
-                            </div>
-
-                            <!-- Email input -->
-                            <div class="form-outline mb-4">
-                                <input type="email" id="form3Example3" class="form-control" />
-                                <label class="form-label" for="form3Example3">Email address</label>
-                            </div>
-
-                            <!-- Password input -->
-                            <div class="form-outline mb-4">
-                                <input type="password" id="form3Example4" class="form-control" />
-                                <label class="form-label" for="form3Example4">Password</label>
-                            </div>
-
-                            <!-- Checkbox -->
-                            <div class="form-check d-flex justify-content-center mb-4">
-                                <input class="form-check-input me-2" type="checkbox" value="" id="form2Example3" checked />
-                                <label class="form-check-label" for="form2Example3">
-                                    Subscribe to our newsletter
-                                </label>
-                            </div>
-
-                            <!-- Submit button -->
-                            <button type="submit" class="btn btn-primary btn-block mb-4">
-                                Sign up
-                            </button>
-
-                            <!-- Register buttons -->
-                            <div class="text-center">
-                                <p>or sign up with:</p>
-                                <button type="button" class="btn btn-primary btn-floating mx-1">
-                                    <i class="fab fa-facebook-f"></i>
-                                </button>
-
-                                <button type="button" class="btn btn-primary btn-floating mx-1">
-                                    <i class="fab fa-google"></i>
-                                </button>
-
-                                <button type="button" class="btn btn-primary btn-floating mx-1">
-                                    <i class="fab fa-twitter"></i>
-                                </button>
-
-                                <button type="button" class="btn btn-primary btn-floating mx-1">
-                                    <i class="fab fa-github"></i>
-                                </button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </section>
+           
             <!--Section: Content-->
         </div>
     </main>
     <!--Main layout-->
+    <div class="container my-5">
 
+        <style>
+            .border-top {
+                border-top: 5px solid #33b5e5 !important;
+                border-top-left-radius: .25rem !important;
+                border-top-right-radius: .25rem !important;
+            }
+        </style>
+
+        <!--Section: Content-->
+        <section class="text-center dark-grey-text mb-5">
+
+            <div class="card">
+                <div class="card-body rounded-top border-top p-5">
+
+                    <!-- Section heading -->
+                    <h3 class="font-weight-bold my-4">Contact Us</h3>
+                    <!-- Section description -->
+                    <p class="font-weight-light mx-auto mb-4 pb-2">Lorem ipsum dolor, sit amet consectetur<br> adipisicing elit. Id quam sapiente molestiae.</p>
+
+                    <form class="mb-4 mx-md-5" action="">
+
+                        <div class="row">
+                            <div class="col-md-6 mb-4">
+
+                                <!-- Name -->
+                                <input type="text" id="name" class="form-control" placeholder="Name">
+
+                            </div>
+                            <div class="col-md-6 mb-4">
+
+                                <!-- Email -->
+                                <input type="email" id="email" class="form-control" placeholder="Email">
+
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-12 mb-4">
+
+                                <!-- Subject -->
+                                <input type="text" id="subject" class="form-control" placeholder="Subject">
+
+                            </div>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-12">
+
+                                <div class="form-group mb-4">
+                                    <textarea class="form-control rounded" id="message" rows="3" placeholder="How can we help?"></textarea>
+                                </div>
+
+                                <div class="text-center">
+                                    <button type="submit" class="btn btn-info btn-md">Submit</button>
+                                </div>
+
+                            </div>
+                        </div>
+
+                    </form>
+
+                </div>
+            </div>
+
+        </section>
+        <!--Section: Content-->
+
+    </div>
    
   
 
