--- a/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
+++ b/MVCTravelBookingISE/Views/FlightModels/Index.cshtml
@@ -125,7 +125,7 @@
                 </div>
                 <div class="col">
                     <div class="mb-3">
-                        <a class="btn btn-primary text-white" asp-action="Create">Search Flights!</a>
+                        <a class="btn btn-primary text-white" asp-controller="AccomodationModels" asp-action="Filter" asp-action="Create">Search Flights!</a>
 
 
 
@@ -172,7 +172,7 @@
         </div>
     </div>
    
-    <table class="table table-striped">
+    <table class="table table-hover table-dark text-white">
     <thead>
         <tr>
             <th>
